--- a/index.html
+++ b/index.html
@@ -420,6 +420,12 @@
       </h1>
       <h2>Pacific Education & STEM Consultancy</h2>
       <p>We partner with Pacific Island Ministries of Education to design and deliver culturally grounded, future‑focused solutions in academic excellence and STEM.</p>
+      <div style="margin-top: 24px;">
+        <span style="display: inline-block; font-size: 13px; font-weight: 500; color: var(--ink); padding: 6px 16px; border-radius: 20px; background: rgba(0, 0, 0, 0.06); margin-bottom: 12px;">The team behind Amanaki STEM Academy</span>
+        <div style="margin-top: 16px;">
+          <img src="asa-logo.png" alt="Amanaki STEM Academy Logo" style="max-width: 150px; height: auto;">
+        </div>
+      </div>
     </section>
 
     <!-- Services -->
